# OSLM-Crawler

./: pyproject.toml
src/oslm_crawler/: __init__.py
tests/crawlers/: test_baai_data.py  test_open_data_lab.py
