[project]
name = "oslm-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Leo", email = "95532869+MorePeanuts@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
oslm-crawler = "oslm_crawler:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
